# multicloud-scheduled-jobs

./: .gitignore  AGENTS.md  README.md
.codex/: README.md
.github/workflows/: terraform-validate.yml
cli/: README.md  pyproject.toml
cli/scheduled_batch_cli/: __init__.py  cli.py  config.py  deployment.py  templates.py  terraform.py  validators.py
cli/scheduled_batch_cli/templates/: main.tf.tmpl  outputs.tf.tmpl  providers.tf.tmpl  terraform.tfvars.json.tmpl  variables.tf.tmpl  versions.tf.tmpl
cli/tests/: test_config.py  test_render.py  test_validators.py
examples/azure/basic/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
examples/azure/private-subnet-no-public-ip/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  (+1 more)
examples/basic/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
examples/multicloud-switcher/: .terraform.lock.hcl  README.md  azure.tfvars.example  main.tf  outputs.tf  variables.tf
examples/private-subnet-with-vpc-endpoints/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
modules/batch-fargate/: README.md  batch.tf  iam.tf  outputs.tf  variables.tf
modules/eventbridge-scheduler-sfn/: README.md  iam.tf  locals.tf  outputs.tf  scheduler.tf  variables.tf
modules/scheduled-batch-job/: README.md  main.tf  outputs.tf  variables.tf
modules/stepfunctions-batch-submit/: README.md  iam.tf  locals.tf  outputs.tf  sfn.tf  variables.tf
modules/vpc-endpoints-fargate/: README.md  endpoints.tf  locals.tf  outputs.tf  variables.tf
(+63 files in other folders)
